fix text on ios

--- a/source/scss/main_index_mobile.scss
+++ b/source/scss/main_index_mobile.scss
@@ -572,8 +572,8 @@
       box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
       border-radius: 50%;
       background-image: url(../img/icon_chat_bot_main-mobile.svg);
-      top: 115px;
-      left: 69px;
+      top: 130px;
+      left: 82px;
 
       &:hover {
         background-color: #ffffff;
